template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epub-press-server
  labels:
    app: epub-press-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epub-press-server
  template:
    metadata:
      labels:
        app: epub-press-server
    spec:
      containers:
        - name: epub-press-server
          image: avanishpatel/epub-press-server:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: epub-press-server
spec:
  selector:
    app: epub-press-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epub-press-server-ingress
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - epub-press-server.64.181.209.134.nip.io
      secretName: epub-press-server-tls
  ingressClassName: nginx
  rules:
    - host: epub-press-server.64.181.209.134.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epub-press-server
                port:
                  number: 80
